# news-aggregator

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
config/: default.yaml  with-email.yaml
news_aggregator/: cli.py  pipeline.py
news_aggregator/aggregation/: __init__.py  base.py  deduplicator.py  registry.py  top_n.py  top_n_lucky_m.py
news_aggregator/config/: loader.py  schema.py
news_aggregator/llm/: client.py  prompts.py
news_aggregator/models/: article.py  result.py
news_aggregator/output/: emailer.py  formatter.py  writers.py
news_aggregator/sources/: __init__.py  base.py  gdelt.py  guardian.py  newsapi.py  registry.py
tests/: conftest.py
tests/integration/: test_gdelt_adapter.py  test_guardian_adapter.py  test_newsapi_adapter.py  test_pipeline.py
tests/unit/: test_config.py  test_deduplicator.py  test_emailer.py  test_formatter.py  test_llm_client.py  test_models.py  test_top_n.py  test_top_n_lucky_m.py
